# social-media-agency

./: .env.example  .gitignore  CLAUDE.md  CampaignForge-Pitch-Deck.pptx  README.md  YC-ROADMAP.md  package-lock.json  package.json
backend/: Dockerfile  fly.toml  pyproject.toml
backend/src/agency/: config.py  dependencies.py  main.py
backend/src/agency/agents/: ad_copy.py  analytics.py  autonomous_operator.py  competitive_intel.py  content_writer.py  graph.py  graph_runtime.py  orchestrator.py  qa_brand.py  seo.py  state.py  strategy.py  utils.py  video_script.py
backend/src/agency/middleware/: api_key_auth.py  tenant.py
backend/src/agency/models/: database.py  schemas.py  tables.py
backend/src/agency/routers/: acquisition.py  audit.py  auth.py  billing.py  brand_analytics.py  campaigns.py  clients.py  comments.py  competitive.py  content.py  health.py  integrations.py  magic_brief.py  notifications.py  oauth.py  portal.py  public_api.py  publishing.py  reports.py  slack.py  stats.py  team.py  webhooks_config.py
backend/src/agency/services/: ad_optimization.py  analytics_fetcher.py  api_keys.py  audit.py  billing.py  brand_learning.py  client_acquisition.py  cross_learning.py  image_generation.py  knowledge_base.py  llm_provider.py  magic_brief.py  notifications.py  publishing.py  reporting.py  scheduler.py  slack_integration.py  team.py  trends.py  webhook_dispatcher.py  white_label.py
backend/src/agency/utils/: encryption.py
backend/tests/: conftest.py  test_health.py
backend/tests/test_agents/: test_graph.py
db/: init.sql  seed.sql
docker/: docker-compose.yml
docs/: CampaignForge-Beta-Testing-Plan.docx  CampaignForge-YC-Pitch.docx  _test.docx  (+2 more)
(+79 files in other folders)
